[gd_scene load_steps=3 format=3 uid="uid://cr0u8bwaa0w8d"]

[ext_resource type="Texture2D" uid="uid://bcq4eil2q0bfl" path="res://Assets/Game Assets/Enemy/Boss.png" id="1_nb0kg"]
[ext_resource type="Script" path="res://Scripts/xar'kan'thra.gd" id="1_q8ync"]

[node name="Xar\'kan\'thra" type="Area2D" groups=["BOSS"]]
scale = Vector2(2.94909, 2.94909)
collision_layer = 512
collision_mask = 132
script = ExtResource("1_q8ync")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_nb0kg")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-28, 120, -32, 131, -58, 126, -64, 72, -57, 36, -48.1504, 18.3107, -63, 16, -67, 67, -75, 105, -87, 105, -92, 3, -72, -40, -54, -34, -58.3231, -7.12084, -41.3687, -10.1726, -57, -48, -74, -51, -75, -86, -67, -112, -48, -109, -34, -52, -46, -120, -27, -129, -15, -99, -17, -77, 0, -129, 19, -77, 17, -99, 29, -129, 46, -121, 34, -52, 51, -108, 68, -111, 77, -89, 74, -51, 59, -50, 41.3687, -9.83353, 57, -8, 54, -35, 72, -40, 93, 3, 89, 105, 75, 104, 68, 69, 63, 17, 49.1677, 18.3107, 56, 35, 65, 70, 60, 125, 32, 131, 29, 120, 41, 109, 34.6475, 69.2969, 33, 59, 29, 96, 22, 117, 4, 120, 4, 111, 14, 93, 4.06905, 104.778, 0, 97, -5, 105, -14, 93, -4.06905, 111.221, -4.06905, 119.698, -23, 113, -29, 91, -34.926, 61.0358, -41, 109)

[node name="TIMERS" type="Node2D" parent="."]
scale = Vector2(1, 1)

[node name="Laser_1_shoot_timer" type="Timer" parent="TIMERS"]
wait_time = 0.3
autostart = true

[node name="Laser_2_shoot_timer" type="Timer" parent="TIMERS"]
wait_time = 0.4
autostart = true

[node name="Laser_3_shoot_timer" type="Timer" parent="TIMERS"]
autostart = true

[node name="Missile_shoot_timer" type="Timer" parent="TIMERS"]
wait_time = 2.0
autostart = true

[node name="Move_Timer" type="Timer" parent="TIMERS"]
wait_time = 7.0
autostart = true

[node name="ShieldSpawnTimer" type="Timer" parent="TIMERS"]
wait_time = 7.0
autostart = true

[node name="PEWPEW" type="Node2D" parent="."]

[node name="Missile_PEWPEW" type="Marker2D" parent="PEWPEW"]
position = Vector2(-53.4094, 147.669)

[node name="Missile_PEWPEW2" type="Marker2D" parent="PEWPEW"]
position = Vector2(54.4205, 146.652)

[node name="Missile_PEWPEW3" type="Marker2D" parent="PEWPEW"]
position = Vector2(-83.9273, 134.445)
scale = Vector2(1, 1)

[node name="Missile_PEWPEW4" type="Marker2D" parent="PEWPEW"]
position = Vector2(83.927, 133.428)
scale = Vector2(1, 1)

[node name="Laser_1_PEWPEW" type="Marker2D" parent="PEWPEW"]
position = Vector2(-60.6967, 118.681)

[node name="Laser_1_PEWPEW2" type="Marker2D" parent="PEWPEW"]
position = Vector2(60.6967, 119.698)

[node name="Laser_2_PEWPEW" type="Marker2D" parent="PEWPEW"]
position = Vector2(-82.0592, 104.1)

[node name="Laser_2_PEWPEW2" type="Marker2D" parent="PEWPEW"]
position = Vector2(82.0592, 106.134)

[node name="Laser_3_PEWPEW" type="Marker2D" parent="PEWPEW"]
position = Vector2(-3.8147e-06, 94.9445)

[node name="SpawnCollectables" type="Marker2D" parent="PEWPEW"]
position = Vector2(0, 119.698)
scale = Vector2(1, 1)

[connection signal="timeout" from="TIMERS/Laser_1_shoot_timer" to="." method="_on_laser_1_shoot_timer_timeout"]
[connection signal="timeout" from="TIMERS/Laser_2_shoot_timer" to="." method="_on_laser_2_shoot_timer_timeout"]
[connection signal="timeout" from="TIMERS/Laser_3_shoot_timer" to="." method="_on_laser_3_shoot_timer_timeout"]
[connection signal="timeout" from="TIMERS/Missile_shoot_timer" to="." method="_on_missile_shoot_timer_timeout"]
[connection signal="timeout" from="TIMERS/Move_Timer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="TIMERS/ShieldSpawnTimer" to="." method="_on_shield_spawn_timer_timeout"]
